--- a/apps/on-the-dodge/src/pages/index.astro
+++ b/apps/on-the-dodge/src/pages/index.astro
@@ -5,7 +5,7 @@ import { Main as Layout } from "@layouts/Main"
 // import Button from "@component/Button/index.tsx"
 // import TimeInput from "@component/TimeInput/index.tsx"
 // import Select from "@component/Select/index.tsx"
-import Form from "@component/Form/index.tsx"
+import Form from "@component/Form"
 ---
 
 <Layout title="On The Dodge">
